fixed pic spacing on profile page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -399,7 +399,7 @@ box-shadow: 10px 10px 26px 0px rgba(0,0,0,0.44);
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: 30px auto;
+  margin: 10px auto;
   // background: purple;
   // padding: 0 4px;
   .missing-content-message {
@@ -421,6 +421,7 @@ box-shadow: 10px 10px 26px 0px rgba(0,0,0,0.44);
 .profile-pics .overlay {
   width: 300px;
   height: 300px;
+
   background: black;
 }
 
